Fixed bodyinfo width on small screens

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button:focus {
     margin: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
-    width: min(30vw, 1000px);
+    width: 30vw;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
@@ -82,11 +82,19 @@ button:focus {
 .bodyinfo p {
     margin-block: 10px;
 }
+body{
+    font-family: "Segoe UI",Tahoma,Geneva,Verdana,sans-serif;		
+    margin: 0;
+    color: white;
+    background: linear-gradient(90deg,rgba(55,71,79,0),rgba(55, 71, 79, 0.7),rgba(55, 71, 79, 0.7),rgba(55,71,79,0)),url(bg1.jpg);
+    background-attachment: fixed;
+    }
 @media (max-width:1000px) {
     .systeminfo, .bodyinfo, .nosuchsystem{
         margin-top: 10px;
         margin-left: auto;
         margin-right: auto;
+        width: 80vw;
     }
     input{
         width: 60vw;
@@ -99,17 +107,8 @@ button:focus {
         width: auto;
         display: block;
     }
-}
-body{
-	font-family: "Segoe UI",Tahoma,Geneva,Verdana,sans-serif;		
-	margin: 0;
-	color: white;
-	background: linear-gradient(90deg,rgba(55,71,79,0),rgba(55, 71, 79, 0.7),rgba(55, 71, 79, 0.7),rgba(55,71,79,0)),url(bg1.jpg);
-	background-attachment: fixed;
-	}
-@media (max-width:900px){
-	body{
-		background: linear-gradient(90deg,rgba(55, 71, 79, 0.7),rgba(55, 71, 79, 0.7)),url(bg1.jpg);
-		background-attachment: fixed;
-	}
+    body{
+        background: linear-gradient(90deg,rgba(55, 71, 79, 0.7),rgba(55, 71, 79, 0.7)),url(bg1.jpg);
+        background-attachment: fixed;
+    }
 }
